# lazymc-docker-proxy

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  KUBERNETES_IMPLEMENTATION.md  README.md  command.sh  docker-compose.yaml  entrypoint.sh  lazymc.toml  start-command.sh
.github/: FUNDING.yml  dependabot.yml
.github/actions/docker/: action.yml
.github/workflows/: dependabot-auto-merge.yml  push.yml  tag.yml
src/: backend.rs  docker.rs  health.rs  kubernetes.rs  logging.rs  main.rs
src/adapter/: mod.rs
src/adapter/docker/: mod.rs
src/adapter/systemd/: mod.rs  proxy.rs
src/command/: docker.rs  mod.rs
src/entrypoint/: config.rs  docker.rs  mod.rs
tests/bats/: docker-compose.yaml  integration-test.bats  intergration-test.bats  util.bash
tests/bats/docker/legacy-forge/: docker-compose.yaml  legacy-forge.bats
tests/bats/docker/multi-server/: docker-compose.yaml  multi-server.bats
tests/bats/docker/static-network/: docker-compose.yaml  static-network.bats
tests/bats/docker/unexpected-server-state-recovery/: docker-compose.yaml  unexpected-server-state-recovery.bats
tests/bats/kubernetes/: README.md  k8s-util.bash  kind-config.yaml  kubernetes.bats  manifests.yaml
tests/bats/legacy-forge/: docker-compose.yaml  legacy-forge.bats
tests/bats/multi-server/: docker-compose.yaml  multi-server.bats
tests/bats/static-network/: docker-compose.yaml  static-network.bats
tests/bats/systemd/: util.bash
tests/bats/unexpected-server-state-recovery/: docker-compose.yaml  unexpected-server-state-recovery.bats
tests/bats/vanilla/: docker-compose.yaml  vanilla.bats
tests/bot/: Cargo.toml  Dockerfile
tests/bot/src/: main.rs
(+6 files in other folders)
