[package]
name = "lazymc-docker-proxy"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"

[dependencies]
bollard = "0.18.1"
clap = { version = "4.5.49", features = ["derive"] }
ctrlc = { version = "3.5.0", features = ["termination"] }
futures = "0.3.31"
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.12.1"
serde = "1.0.228"
tokio = { version = "1.47.1", default-features = false, features = [
    "rt-multi-thread",
] }
toml = "0.9.8"
version-compare = "0.2.0"
