[package]
name = "lazymc-docker-proxy"
version = "0.1.0"
edition = "2021"
rust-version = "1.74.0"

[dependencies]
bollard = "0.20.0"
clap = { version = "4.5.55", features = ["derive"] }
ctrlc = { version = "3.5.1", features = ["termination"] }
futures = "0.3.31"
log = "0.4"
pretty_env_logger = "0.5"
regex = "1.12.2"
serde = "1.0.228"
tokio = { version = "1.49.0", default-features = false, features = [
    "rt-multi-thread",
] }
toml = "0.9.11"
version-compare = "0.2.1"
